k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: letter-image-generator-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: letter-image-generator-prod
